[tool.poetry]
name = "image-conversion"
version = "0.1.0"
description = "Microservice for converting SVG to PNG/ICO"
authors = ["svgly <denioberlev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
