[tool.poetry]
name = "image-conversion"
version = "0.2.0"
description = "Microservice for converting SVG to PNG/ICO"
authors = ["svgly <denioberlev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
isort = "^6.0.1"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
